# mxe-octave

./: .hgignore  Makefile  Makefile.in  README  binary-dist-rules.mk  bootstrap  build_packages.m  configure.ac  dist-files.mk  hg-octave-dist.mk  index.html  makeinst-script.sh  mk-dist  octave-wrapper.in  octaverc
installer-files/: README.html  cmdshell-no-short-path.patch  cmdshell.bat  fc_update.bat  octave-bat-no-short-path.patch  octave-firsttime.vbs  octave-no-short-path.patch  octave.bat  octave.vbs  post-install.bat
src/: a52dec.mk  agg.mk  apr-util.mk  apr.mk  armadillo.mk  arpack-1-gcc10.patch  arpack.mk  atk-1-DllMain.patch  atk.mk  atkmm.mk  aubio.mk  bfd.mk  binutils.mk  biosig.mk  blas.mk  blas_switch.mk  boost.mk  build-autoconf.mk  build-automake-1-perl-5.patch  build-automake.mk  build-binutils.mk  build-bison.mk  build-cmake-1-fixes.patch  build-cmake.mk  build-flex-1-fixes.patch  build-flex.mk  build-gawk.mk  build-gcc.mk  build-gettext.mk  build-gperf.mk  build-libtool.mk  build-lzip.mk  build-m4-1-fixes.patch  build-m4-glibc2-28.patch  build-m4.mk  build-mako.mk  build-markupsafe.mk  build-meson.mk  build-msvctools.mk  build-ninja.mk  (+884 more)
src/build-msvctools/: Makefile  Windows-clg++.cmake  Windows-clgcc.cmake.in  cc-msvc.cc  fixlibtool2.in  gcc.diff  getopt.diff  gfortran-msvc.cc  libgfortran-dllinit.c  libgfortran-msvcinit.c  lt-postproc  stdbool.h  unistd.h
src/build-msvctools/compat/: Makefile  mingwcompat.c  mingwcompat_gcc.c
src/build-msvctools/math/: Makefile  finite.c  finitef.c  funx.c  isinf.c  isinff.c  math.def  math.h.in  nan.c  nextafter.c
tools/: build-make.sh  gen-bat-wrapper  make-shared-from-static  makeinst-script.sh.in  mk-hg-id.sh  msys2-install.py  pkg-install.py  set-mxe-env.sh.in  set_mxe_env.sh.in
